0_Intern_project/jitfailure-dolfin_expression_2c7edadd899aea84408748cca3acb990/error.log
/tmp/tmperjnv0i0/dolfin_expression_2c7edadd899aea84408748cca3acb990.cpp: In member function ‘virtual void dolfin::dolfin_expression_2c7edadd899aea84408748cca3acb990::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmperjnv0i0/dolfin_expression_2c7edadd899aea84408748cca3acb990.cpp:61:26: error: ‘r’ was not declared in this scope
           values[0] = -1/r;
                          ^
